--- a/src/main/resources/templates/fichefilm.html
+++ b/src/main/resources/templates/fichefilm.html
@@ -61,7 +61,7 @@
 				</div>
 
 				<div class="form-group" th:each="a,iter : *{acteurs}">
-					<label for="titre" class="col-xs-2 control-label"
+					<label class="col-xs-2 control-label"
 						th:text="${'Acteur ' + (iter.index + 1)}"></label>
 					<div class="col-xs-5">
 						<input th:value="${a.prenom}" readonly class="form-control" />
