--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,29 +1,29 @@
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-		        <a  href="index" class="navbar-brand active">
-		        <span class="glyphicon glyphicon-film"></span> 
-		        <span class="glyphicon glyphicon-film"></span> 
-		        </a>
-		          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		          </button>
-		    </div>
-			<div class="navbar-collapse collapse" id="navbar-main">
-				<ul class="nav navbar-nav navbar-right">
-					<li ><a th:href="@{/index}">Accueil</a></li>
-					<li><a th:href="@{/lister}">Liste des films</a></li>
-					<li th:if="${@membre.admin}"><a th:href="@{/ajouter}">Ajouter un film</a></li>
-<!-- 					<li><a href="listerStyle">Genres</a></li> -->
-					
-					<li>
-						<a th:if="${@membre.id == 0}" th:href="@{/connect}">Se connecter</a>
-						<a th:if="${@membre.id != 0}" th:href="@{/deconnect}">Se déconnecter</a>
-					</li>
-			       
-				</ul>
-			</div>
-		</div>
-	</nav>	
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <a href="index" class="navbar-brand active">
+                <span class="glyphicon glyphicon-film"></span>
+                <span class="glyphicon glyphicon-film"></span>
+            </a>
+
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a th:href="@{/index}" th:text="#{accueil}"></a></li>
+                <li><a th:href="@{/lister}" th:text="#{listefilms}"></a></li>
+                <li th:if="${@membre.admin}" th:text="#{ajouterfilm}"><a th:href="@{/ajouter}"></a></li>
+
+                <li>
+                    <a th:if="${@membre.id == 0}" th:href="@{/connect}" th:text="#{seconnecter}"></a>
+                    <a th:if="${@membre.id != 0}" th:href="@{/deconnect}" th:text="#{sedeconnecter}"></a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
