--- a/src/main/resources/templates/listefilms.html
+++ b/src/main/resources/templates/listefilms.html
@@ -1,67 +1,76 @@
-
 <!DOCTYPE>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
-	<link rel="stylesheet" th:href="@{/css/commun.css}">
-	
-	
+    <meta charset="UTF-8">
+    <title>Insert title here</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<style type="text/css">
+    <link rel="stylesheet" th:href="@{/css/commun.css}">
 
 
-.centre {
-	text-align: center;
-}
+    <style type="text/css">
 
 
-img {
-	vertical-align: bottom;
-}
-</style>
+        .centre {
+            text-align: center;
+        }
+
+
+        img {
+            vertical-align: bottom;
+        }
+    </style>
 </head>
 <body>
-	<th:block th:replace="header.html" />
+<th:block th:replace="header.html"/>
 
-	<div class="container">
-	
-	<p th:if = "${erreur}" th:text = "${erreur}">
-		
-	</p>
-	
-	<h1 class="bleu">Liste des films<span class="badge btn-primary gros pull-right" th:text="${#arrays.length(listeF)}"></span></h1>
-	
-	<table class="table table-hover table-striped">
-		<tr>
-			<th>Titre</th>
-			<th>Année</th>
-			<th>Genre</th>
-			<th>Réalisateur</th>
-			<th>Durée</th>
-			<th th:if="${@membre.id != 0}">Avis</th>
-		</tr>
-		<tr th:each = "f : ${listeF}">
-		
-			<td><a th:href="@{afficher(id=${f.id})}"><span th:text="${f.titre}"></span></a></td>
-			<td th:text="${f.annee}"></td>
-			<td th:text="${f.genre.libelle}"></td>
-			<td th:text="${f.realisateur.prenom + ' ' + f.realisateur.nom}"></td>
-			<td th:text="${f.duree}"></td>
-			<td th:if="${@membre.id != 0}" >
-			<a th:href="@{/ajouteravis/{id}(id=${f.id})}"><img th:src="@{/images/plus-circle.svg}" alt="Ajouter un avis"/></a></td>
-		</tr>
-	</table>
+<div class="container">
+
+    <p th:if="${erreur}" th:text="${erreur}">
+
+    </p>
+
+    <h1 th:text="#{listefilms}" class="bleu"><span class="badge btn-primary gros pull-right"
+                                          th:text="${#arrays.length(listeF)}"></span></h1>
+
+    <table class="table table-hover table-striped">
+        <tr>
+            <th th:text="#{titre}">Titre</th>
+            <th th:text="#{annee}">Année</th>
+            <th th:text="#{genre}">Genre</th>
+            <th th:text="#{realisateur}">Réalisateur</th>
+            <th th:text="#{duree}">Durée</th>
+            <th th:text="#{avis}" th:if="${@membre.id != 0}">Avis</th>
+            <th th:text="#{modifier}" th:if="${@membre.admin}">Modifier</th>
+            <th th:text="#{supprimer}" th:if="${@membre.admin}">Supprimer</th>
+        </tr>
+        <tr th:each="f : ${listeF}">
+
+            <td><a th:href="@{afficher(id=${f.id})}"><span th:text="${f.titre}"></span></a></td>
+            <td th:text="${f.annee}"></td>
+            <td th:text="${f.genre.libelle}"></td>
+            <td th:text="${f.realisateur.prenom + ' ' + f.realisateur.nom}"></td>
+            <td th:text="${f.duree}"></td>
+            <td th:if="${@membre.id != 0}">
+                <a th:href="@{/ajouteravis/{id}(id=${f.id})}"><img th:src="@{/images/plus-circle.svg}"
+                                                                   alt="Ajouter un avis"/></a>
+            </td>
+            <td th:if="${@membre.admin}">
+                <a th:href="@{/modifier/{id}(id=${f.id})}">Modifier</a>
+            </td>
+            <td th:if="${@membre.admin}">
+                <a th:href="@{/supprimer/{id}(id=${f.id})}">Supprimer</a>
+            </td>
+        </tr>
+    </table>
 
 
-	</div>
-		
-		<th:block th:replace="footer.html" />
+</div>
+
+<th:block th:replace="footer.html"/>
 
 
 </body>
