--- a/src/main/resources/templates/modiffilm.html
+++ b/src/main/resources/templates/modiffilm.html
@@ -22,7 +22,7 @@
 		<p class = "erreur" th:if="${erreur}" th:text="${erreur}"></p>
 		<br>
 		<div>
-			<form action="ajouter" method="POST"
+			<form th:action="@{/modifier/{id}(id=${film.id})}" method="POST"
 				class="form-horizontal" th:object="${film}">
 
 				<div class="form-group">
@@ -79,18 +79,18 @@
 						</div>
 					</div>
 				</div>
-				
-				<div class="form-group" th:each="i : ${#numbers.sequence(0, 4)}">
-					<label for="titre" class="col-xs-2 control-label"
-						th:text="${'Acteur ' + (i + 1)}"></label>
+
+				<div class="form-group" th:each="act, i: ${film.acteurs}">
+					<label class="col-xs-2 control-label"
+						   th:text="Acteur"></label>
 					<div class="col-xs-5">
-						<input th:name="${'acteurs['+i+'].prenom'}" placeholder="prénom" class="form-control" />
+						<input th:value="${act.prenom}" th:name="${'acteurs[' + i.index + '].prenom' }" th:placeholder="#{prenom}" class="form-control"/>
 					</div>
 					<div class="col-xs-5">
-						<input th:name="${'acteurs['+i+'].nom'}" placeholder="nom" class="form-control" />
+						<input th:value="${act.nom}" th:name="${'acteurs[' + i.index + '].nom' }" placeholder="#{nom}" class="form-control"/>
 					</div>
 				</div>
-				
+
 				<div class="form-group">
 					<label for="synopsis" class="col-xs-2 control-label">Synopsis
 						:</label>
